fix(all): many updates and fixes